# Seat-Generation

./: .replit  DeMaria.py  MarquesLeach.py  config.py  pyproject.toml  replit.nix  seatsDM.md  seatsML.md  vercel.json
api/: DeMaria.py  config.py
templates/: index.html  seatsML.md  seats_display.html
